Update dot_zsh/aliases Update dot_zsh/dot_zshrc Update dot_zsh/env Update private_dot_config/i3/config Update private_dot_config/polybar/config Update private_dot_mozilla/private_firefox/private_k2r25yyx.Default User-1643941102233/chrome/userChrome.css Update private_dot_mozilla/private_firefox/private_k2r25yyx.Default User-1643941102233/user-overrides.js Update scripts/executable_monitor.sh

--- a/private_dot_mozilla/private_firefox/private_k2r25yyx.Default User-1643941102233/chrome/userChrome.css
+++ b/private_dot_mozilla/private_firefox/private_k2r25yyx.Default User-1643941102233/chrome/userChrome.css
@@ -38,9 +38,9 @@
     display: none !important;
 }
 */
-#tracking-protection-icon-container {
+/*#tracking-protection-icon-container {
     display: none !important;
-}
+}*/
 
 #urlbar-container {
     min-width: 0px !important;
